--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/ch2.css">
 </head>
 <body>
-    <div id="app"></div>
+    <h1>Hello!</h1>
 
-    <script src="js/challenge1.js"></script>
+    <script src="js/challenge2.js"></script>
 </body>
 </html>
